--- a/src/css/components/collab-types.scss
+++ b/src/css/components/collab-types.scss
@@ -1,6 +1,9 @@
 .collab-types {
 	z-index: 10;
-	padding: 0 0 200px 0;
+	padding: 0 0 20px 0;
+	@include media('sm') {
+		padding: 0 0 200px 0;
+	}
 	&__layout {
 		@include layout();
 	}
@@ -8,25 +11,42 @@
 	&__list {
 		display: flex;
 		justify-content: space-between;
+		flex-wrap: wrap;
 		margin: 0;
 		padding: 0;
+		@include media('sm') {
+			flex-wrap: nowrap;
+		}
 	}
 }
 .collab-type {
-	width: 25%;
+	width: 100%;
 	list-style: none;
+	margin-bottom: 40px;
+	@include media('sm') {
+		width: 25%;
+		margin-bottom: 0;
+	}
 
 	&__title {
-		margin-bottom: 20px;
+		margin-bottom: 10px;
 		@include font('w');
-		font-size: 1.8em;
+		font-size: 1em;
 		line-height: 1;
 		text-transform: uppercase;
-		letter-spacing: 2px;
+		letter-spacing: 1px;
 		color: #fff;
+		@include media('sm') {
+			margin-bottom: 20px;
+			font-size: 1.8em;
+		}
 	}
 
 	&__desc {
+		font-size: .8em;
 		color: fade-out(#fff, .2);
+		@include media('sm') {
+			font-size: 1em;
+		}
 	}
 }
