--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -29,6 +29,9 @@ body {
 	line-height: 1.3;
 	color: $dark;
 	background-color: $dark;
+	&.popup-menu--active {
+		overflow: hidden;
+	}
 }
 
 @mixin layout() {
@@ -68,7 +71,7 @@ h1, h2, h3, h4, h5, h6 {
 	&__desc {
 		width: 100%;
 		margin-top: 20px;
-		font-size: 1em;
+		font-size: .8em;
 		@include media('sm') {
 			font-size: 1.2em;
 			width: 50%;
