--- a/src/includes/publications.njk
+++ b/src/includes/publications.njk
@@ -3,7 +3,7 @@
 		<div class="publications__stain publications__stain--top"></div>
 		<div class="publications__header">
 			<div class="publications__title section__title">My publications</div>
-			<div class="publications__desc section__desc">See <a href="#">Scholar</a> for more info</div>
+			<div class="publications__desc section__desc">See <a href="{{ metadata.scholar.url }}" target="_blank">Scholar</a> for more info</div>
 		</div>
 		
 		<div class="publications__body">
