--- a/src/css/components/menu-switcher.scss
+++ b/src/css/components/menu-switcher.scss
@@ -6,6 +6,7 @@
 	padding: 15px;
 	line-height: 0;
 	background-color: fade-out($dark, .8);
+	@include rounded(0 0 0 10px);
 	@include media('bg') {
 		display: none;
 	}
