--- a/src/includes/full-footer.njk
+++ b/src/includes/full-footer.njk
@@ -11,7 +11,7 @@
 					<div class="request__contacts-title">If you need to attach any materials — send your request to e-mail</div>
 					<div class="request__contacts-mail">
 						<a class="request__contacts-mail-link" href="mailto:{{ metadata.mailto }}" target="_blank">{{ metadata.mailto }}</a>
-						<div class="request__contacts-mail-copy">🔗</div>
+						<div class="request__contacts-mail-copy"></div>
 					</div>
 				</div>
 				<div class="request__social">
