--- a/src/includes/fun-facts.njk
+++ b/src/includes/fun-facts.njk
@@ -2,10 +2,14 @@
 	<div class="fun-facts__layout">
 		<div class="fun-facts__header">
 
-			<div class="fun-facts__cover">
-				<img class="fun-facts__cover-img" src="/img/0d4d5b1ca0879cd446d88f4152ece956.png" />
-				<div class="fun-facts__title fun-facts__title--first"><span>fun</span></div>
-				<div class="fun-facts__title fun-facts__title--last"><span>facts</span></div>
+			<div class="fun-facts__cover fun-facts-cover">
+				<div class="fun-facts-cover__picture">
+					<img class="fun-facts-cover__img" src="/img/0d4d5b1ca0879cd446d88f4152ece956.png" />
+				</div>
+				<div class="fun-facts-cover__title">
+					<div class="fun-facts-cover__title-word fun-facts-cover__title-word--first"><span>fun</span></div>
+					<div class="fun-facts-cover__title-word fun-facts-cover__title-word--last"><span>facts</span></div>
+				</div>
 			</div>
 
 		</div>
