--- a/src/css/components/about-header.scss
+++ b/src/css/components/about-header.scss
@@ -1,9 +1,16 @@
 .about-header {
-	padding: 100px 0;
+	padding: 40px 0;
+	@include media('sm') {
+		padding: 100px 0;
+	}
 	&__layout {
 		@include layout();
 		display: flex;
 		justify-content: space-between;
+		flex-wrap: wrap;
+		@include media('sm') {
+			flex-wrap: nowrap;
+		}
 	}
 
 	&__stain {
@@ -36,30 +43,43 @@
 
 	&__cover {
 		z-index: 1;
-		width: 40%;
-	}
-
-	&__cover-container {
+		width: 100%;
+		margin-bottom: 20px;
+		@include media('sm') {
+			width: 40%;
+			margin-bottom: 0;
+		}
 	}
 
 	&__cover-layout {
-		width: 400px;
-		height: 400px;
+		width: 200px;
+		height: 200px;
 		z-index: 1;
+		@include media('sm') {
+			width: 400px;
+			height: 400px;
+		}
 	}
 
 	&__cover-layout::before {
 		position: absolute;
-		width: 460px;
-		height: 460px;
-		bottom: -60px;
-		right: 0;
+		width: 240px;
+		height: 240px;
+		bottom: 0;
+		left: 0;
 		z-index: 0;
 		background-image: url('../img/blenda.svg');
 		background-position: 50% 50%;
 		background-repeat: no-repeat;
 		background-size: contain;
 		content: '';
+		@include media('sm') {
+			left: auto;
+			right: 0;
+			bottom: -60px;
+			width: 460px;
+			height: 460px;
+		}
 	}
 
 	&__cover-img {
@@ -72,37 +92,55 @@
 
 	&__content {
 		z-index: 1;
-		width: 60%;
+		width: 100%;
+		@include media('sm') {
+			width: 60%;
+		}
 	}
 
 	&__content-title {
 		color: #fff;
 		@include font('w');
-		font-size: 10em;
+		font-size: 3em;
 		line-height: .9;
 		text-transform: uppercase;
 		letter-spacing: 5px;
 		white-space: nowrap;
+		@include media('sm') {
+			font-size: 10em;
+		}
 	}
 
 	&__content-subtitle {
-		display: flex;
+		@include media('sm') {
+			display: flex;
+		}
 	}
 
 	&__content-me {
-		left: -15px;
+		left: 0;
 		color: #fff;
 		@include font('w');
-		font-size: 10em;
+		font-size: 3em;
 		line-height: .9;
 		text-transform: uppercase;
 		letter-spacing: 5px;
 		white-space: nowrap;
+		@include media('sm') {
+			left: -15px;
+			font-size: 10em;
+		}
 	}
 
 	&__content-desc {
-		top: 4px;
+		margin-top: 20px;
+		font-size: .8em;
 		color: #fff;
+		@include media('sm') {
+			margin-top: 0;
+			top: 4px;
+			font-size: 1em;
+		}
 	}
 
 	.social {
