--- a/src/css/components/request.scss
+++ b/src/css/components/request.scss
@@ -106,10 +106,11 @@
 	}
 
 	&__contacts-mail-copy {
-		display: none;
 		margin-left: 10px;
 		justify-content: center;
 		align-items: center;
+		flex-shrink: 0;
+		// height: 60px;
 		width: 60px;
 		border: 1px #fff solid;
 		@include rounded(100em);
