--- a/src/includes/projects.njk
+++ b/src/includes/projects.njk
@@ -7,65 +7,21 @@
 		</div>
 		<div class="projects__body">
 			<div class="projects__list">
-				<div class="projects__item project">
-					<a class="project__link" href="#">
-						<div class="project__title">Viaduct</div>
-						<div class="project__tags project-tags">
-							<ul class="project-tags__list">
-								<li class="project-tags__item">R&D</li>
-								<li class="project-tags__item">interpretability</li>
-							</ul>
-						</div>
-						<div class="project__desc">
-							R&D, developing of a novel algorithm for interpretable detection of truck failures
-						</div>
-					</a>
-				</div>
-				<div class="projects__item project">
-					<a class="project__link" href="#">
-						<div class="project__title">Talist</div>
-						<div class="project__tags project-tags">
-							<ul class="project-tags__list">
-								<li class="project-tags__item">strategy</li>
-								<li class="project-tags__item">NLP</li>
-								<li class="project-tags__item">scrapping</li>
-								<li class="project-tags__item">analytics</li>
-							</ul>
-						</div>
-						<div class="project__desc">
-							Analyzed thousands of job ads within the alternative protein industry, which provided major improvements for business strategy of the HR agency working within it.
-						</div>
-					</a>
-				</div>
-				<div class="projects__item project">
-					<a class="project__link" href="#">
-						<div class="project__title">Drone Solutions</div>
-						<div class="project__tags project-tags">
-							<ul class="project-tags__list">
-								<li class="project-tags__item">strategy</li>
-								<li class="project-tags__item">fundraising</li>
-								<li class="project-tags__item">CV</li>
-							</ul>
-						</div>
-						<div class="project__desc">
-							Created a strategy for creating a computer vision department in a drone-producing start-up. It helped to raise >$300k funding and the department was successfully created.
-						</div>
-					</a>
-				</div>
-				<div class="projects__item project">
-					<a class="project__link" href="#">
-						<div class="project__title">PhysTech Ventures</div>
-						<div class="project__tags project-tags">
-							<ul class="project-tags__list">
-								<li class="project-tags__item">fundraising</li>
-								<li class="project-tags__item">bio</li>
-							</ul>
-						</div>
-						<div class="project__desc">
-							Evaluated machine learning methods of biotech companies, which applied for funding.
-						</div>
-					</a>
-				</div>
+				{%- for project in projects -%}
+					<div class="projects__item project">
+						<a class="project__link" href="{{ project.link }}">
+							<div class="project__title">{{ project.title }}</div>
+							<div class="project__tags project-tags">
+								<ul class="project-tags__list">
+									{%- for tag in project.tags -%}
+										<li class="project-tags__item">{{ tag }}</li>
+									{%- endfor -%}
+								</ul>
+							</div>
+							<div class="project__desc">{{ project.desc }}</div>
+						</a>
+					</div>
+				{%- endfor -%}
 			</div>
 		</div>
 	</div>
