Scroll-навигация, мелкие правки

--- a/src/css/components/bar.scss
+++ b/src/css/components/bar.scss
@@ -7,9 +7,11 @@
 	}
 	&__layout {
 		@include layout();
+		display: flex;
+		justify-content: flex-end;
 	}
 	.mainmenu {
-
+		width: 70%;
 		&__list {
 			margin: 0;
 			padding: 0;
