--- a/src/includes/experience.njk
+++ b/src/includes/experience.njk
@@ -1,6 +1,7 @@
 <div class="experience">
 	<div class="experience__layout">
 
+		<a class="js-scroll-experience"></a>
 		<div class="experience__section experience__section--work">
 
 			<div class="experience__section-title">Work Experience</div>
@@ -94,6 +95,7 @@
 
 		</div>
 
+		<a class="js-scroll-education"></a>
 		<div class="experience__section experience__section--education">
 
 			<div class="experience__section-title">Education</div>
