--- a/src/includes/open-source-projects.njk
+++ b/src/includes/open-source-projects.njk
@@ -1,3 +1,4 @@
+<a class="js-scroll-open-source"></a>
 <div class="portfolio">
 	<div class="portfolio__layout">
 		<div class="portfolio__stain portfolio__stain--top"></div>
