--- a/src/includes/page-nav.njk
+++ b/src/includes/page-nav.njk
@@ -4,16 +4,16 @@
 		<div class="page-nav__menu">
 			<ul class="page-nav__list">
 				<li class="page-nav__list-item">
-					<a href="" class="page-nav__list-link">Work Experience</a>
+					<a href="#experience" class="js-scroll page-nav__list-link">Work Experience</a>
 				</li>
 				<li class="page-nav__list-item">
-					<a href="" class="page-nav__list-link">Education</a>
+					<a href="#education" class="js-scroll page-nav__list-link">Education</a>
 				</li>
 				<li class="page-nav__list-item">
-					<a href="" class="page-nav__list-link">Open source projects</a>
+					<a href="#open-source" class="js-scroll page-nav__list-link">Open source projects</a>
 				</li>
 				<li class="page-nav__list-item">
-					<a href="" class="page-nav__list-link">Publications</a>
+					<a href="#publications" class="js-scroll page-nav__list-link">Publications</a>
 				</li>
 			</ul>
 		</div>
