--- a/src/includes/publications.njk
+++ b/src/includes/publications.njk
@@ -1,3 +1,4 @@
+<a class="js-scroll-publications"></a>
 <div class="publications">
 	<div class="publications__layout">
 		<div class="publications__stain publications__stain--top"></div>
