--- a/src/css/components/bar.scss
+++ b/src/css/components/bar.scss
@@ -2,7 +2,7 @@
 	padding: 60px 0;
 	z-index: 1000;
 	display: none;
-	@include media('sm') {
+	@include media('lg') {
 		display: block;
 	}
 	&__layout {
