--- a/src/css/components/help.scss
+++ b/src/css/components/help.scss
@@ -1,6 +1,6 @@
 .help {
 	padding: 40px 0;
-	@include media('sm') {
+	@include media('lg') {
 		padding: 100px 0;
 	}
 
@@ -48,7 +48,7 @@
 
 	&__header {
 		margin-bottom: 40px;
-		@include media('sm') {
+		@include media('lg') {
 			margin-bottom: 100px;
 		}
 	}
@@ -61,7 +61,7 @@
 		display: flex;
 		justify-content: space-between;
 		flex-wrap: wrap;
-		@include media('sm') {
+		@include media('md') {
 			flex-wrap: nowrap;
 		}
 	}
@@ -69,7 +69,7 @@
 	&__section {
 		width: 100%;
 		margin-bottom: 40px;
-		@include media('sm') {
+		@include media('md') {
 			width: 44%;
 			margin-bottom: 0;
 		}
@@ -89,7 +89,7 @@
 		font-size: .8em;
 		white-space: normal;
 		@include rounded(10px);
-		@include media('sm') {
+		@include media('lg') {
 			font-size: 1.2em;
 			white-space: nowrap;
 			@include rounded(100em);
@@ -103,7 +103,7 @@
 	&__accordion-item {
 		padding: 20px 0;
 		border-bottom: 1px #fff solid;
-		@include media('sm') {
+		@include media('lg') {
 			padding: 40px 0;
 		}
 	}
@@ -124,7 +124,7 @@
 		@include font('w');
 		font-size: .8em;
 		line-height: 1.2;
-		@include media('sm') {
+		@include media('lg') {
 			font-size: 1.2em;
 		}
 	}
@@ -139,7 +139,7 @@
 		opacity: .5;
 		@include ease(.2s);
 		cursor: pointer;
-		@include media('sm') {
+		@include media('lg') {
 			width: 30px;
 			height: 30px;
 			margin-right: 20px;
@@ -156,7 +156,7 @@
 		font-size: .8em;
 		opacity: .6;
 		overflow: hidden;
-		@include media('sm') {
+		@include media('lg') {
 			width: 80%;
 			font-size: 1.2em;
 		}
@@ -168,7 +168,7 @@
 	&__list-item {
 		padding: 20px 0;
 		border-bottom: 1px #fff solid;
-		@include media('sm') {
+		@include media('lg') {
 			padding: 40px 0;
 		}
 	}
@@ -177,7 +177,7 @@
 		color: #fff;
 		@include font('w');
 		font-size: .8em;
-		@include media('sm') {
+		@include media('lg') {
 			font-size: 1.2em;
 		}
 	}
