--- a/src/css/components/fun-facts.scss
+++ b/src/css/components/fun-facts.scss
@@ -8,7 +8,7 @@
 
 	&__header {
 		display: flex;
-		@include media('sm') {
+		@include media('lg') {
 			justify-content: center;
 			margin-bottom: 60px;
 		}
@@ -32,20 +32,20 @@
 .fun-fact {
 	width: 100%;
 	margin-bottom: 20px;
-	@include media('sm') {
+	@include media('lg') {
 		width: 33.3333%;
 		margin-bottom: 100px;
 	}
 	&__layout {
 		width: 100%;
-		@include media('sm') {
+		@include media('lg') {
 			width: 70%;
 		}
 	}
 	p {
 		margin: 0 0 5px 0;
 		font-size: .8em;
-		@include media('sm') {
+		@include media('lg') {
 			font-size: 1em;
 		}
 	}
@@ -62,7 +62,7 @@
 .fun-facts-cover {
 
 	margin: 0 0 40px;
-	@include media('sm') {
+	@include media('lg') {
 		margin: 0 0 240px;
 	}
 
@@ -70,7 +70,7 @@
 		width: 240px;
 		height: 240px;
 		margin: 0 0 40px 0;
-		@include media('sm') {
+		@include media('lg') {
 			width: 300px;
 			height: 300px;
 			margin: 0;
@@ -88,7 +88,7 @@
 		background-repeat: no-repeat;
 		background-size: contain;
 		content: '';
-		@include media('sm') {
+		@include media('lg') {
 			width: 360px;
 			height: 360px;
 		}
@@ -118,12 +118,12 @@
 		letter-spacing: 2px;
 		white-space: nowrap;
 		z-index: 1;
-		@include media('sm') {
+		@include media('lg') {
 			position: absolute;
 			font-size: 10em;
 		}
 		&--first {
-			@include media('sm') {
+			@include media('lg') {
 				bottom: 0;
 				right: 100%;
 				margin-right: 30px;
@@ -132,7 +132,7 @@
 		}
 
 		&--last {
-			@include media('sm') {
+			@include media('lg') {
 				top: 100%;
 				left: -10px;
 				margin-top: 40px;
@@ -150,7 +150,7 @@
 			@include rounded(100%);
 			pointer-events: none;
 			content: '';
-			@include media('sm') {
+			@include media('lg') {
 				top: -180px;
 				right: -180px;
 				width: 500px;
