--- a/src/css/components/hero.scss
+++ b/src/css/components/hero.scss
@@ -1,6 +1,6 @@
 .hero {
 	padding: 40px 0;
-	@include media('sm') {
+	@include media('lg') {
 		padding: 100px 0;
 	}
 	&__layout {
@@ -8,7 +8,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
-		@include media('sm') {
+		@include media('lg') {
 			flex-wrap: nowrap;
 		}
 	}
@@ -18,7 +18,7 @@
 		z-index: 1;
 		order: 2;
 		margin-top: 60px;
-		@include media('sm') {
+		@include media('lg') {
 			width: 70%;
 			order: 1;
 			margin-top: 0;
@@ -29,7 +29,7 @@
 		margin-bottom: 20px;
 		color: $blue;
 		font-size: 1em;
-		@include media('sm') {
+		@include media('lg') {
 			font-size: 1.2em;
 		}
 	}
@@ -42,7 +42,7 @@
 		line-height: 1;
 		letter-spacing: 1px;
 		text-transform: uppercase;
-		@include media('sm') {
+		@include media('lg') {
 			font-size: 4em;
 		}
 		span {
@@ -56,7 +56,7 @@
 		color: #fff;
 		font-size: 1em;
 		line-height: 1.2;
-		@include media('sm') {
+		@include media('lg') {
 			width: 80%;
 			font-size: 1.2em;
 		}
@@ -64,14 +64,14 @@
 
 	&__tags {
 		margin-top: 20px;
-		@include media('sm') {
+		@include media('lg') {
 			margin-top: 40px;
 		}
 	}
 
 	&__cover {
 		order: 1;
-		@include media('sm') {
+		@include media('lg') {
 			margin-top: 60px;
 			order: 2;
 		}
@@ -99,7 +99,7 @@
 		font-size: .8em;
 		white-space: normal;
 		@include rounded(20px);
-		@include media('sm') {
+		@include media('lg') {
 			padding: 8px 24px;
 			margin: 0 20px 20px 0;
 			font-size: 1.2em;
@@ -127,7 +127,7 @@
 		width: 150px;
 		height: 150px;
 		object-fit: cover;
-		@include media('sm') {
+		@include media('lg') {
 			width: 400px;
 			height: 400px;
 		}
@@ -145,7 +145,7 @@
 		background-size: contain;
 		content: '';
 		transform: rotate(90deg);
-		@include media('sm') {
+		@include media('lg') {
 			width: 460px;
 			height: 460px;
 		}
