--- a/src/css/components/journey.scss
+++ b/src/css/components/journey.scss
@@ -35,12 +35,12 @@
 
 .journey-list {
 	margin-top: 40px;
-	@include media('sm') {
+	@include media('lg') {
 		margin-top: 100px;
 	}
 	&__item {
 		padding-bottom: 40px;
-		@include media('sm') {
+		@include media('lg') {
 			padding-bottom: 100px;
 
 		}
@@ -53,7 +53,7 @@
 		left: 50%;
 		background-color: fade-out(#fff, .7);
 		pointer-events: none;
-		@include media('sm') {
+		@include media('lg') {
 			content: '';
 		}
 	}
@@ -71,7 +71,7 @@
 		filter: blur(20px);
 		@include rounded(100%);
 		pointer-events: none;
-		@include media('sm') {
+		@include media('lg') {
 			content: '';
 		}
 	}
@@ -81,7 +81,7 @@
 		justify-content: space-between;
 		flex-wrap: wrap;
 		padding: 60px 0;
-		@include media('sm') {
+		@include media('lg') {
 			flex-wrap: nowrap;
 		}
 	}
@@ -91,14 +91,14 @@
 	}
 
 	&__item:nth-child(odd) &__item-cover {
-		@include media('sm') {
+		@include media('lg') {
 			order: 1;
 
 		}
 	}
 
 	&__item:nth-child(odd) &__item-desc {
-		@include media('sm') {
+		@include media('lg') {
 			order: 2;
 		}
 	}
@@ -113,20 +113,20 @@
 	}
 
 	&__item:nth-child(even) &__item-cover {
-		@include media('sm') {
+		@include media('lg') {
 			order: 2;
 		}
 	}
 
 	&__item:nth-child(even) &__item-desc {
-		@include media('sm') {
+		@include media('lg') {
 			order: 1;
 		}
 	}
 
 	&__item-cover {
 		margin-bottom: 60px;
-		@include media('sm') {
+		@include media('lg') {
 			margin-bottom: 0;
 
 		}
@@ -136,7 +136,7 @@
 		width: 100%;
 		display: flex;
 		justify-content: center;
-		@include media('sm') {
+		@include media('lg') {
 			width: 50%;
 		}
 	}
@@ -153,7 +153,7 @@
 		height: 200px;
 		z-index: 1;
 		
-		@include media('sm') {
+		@include media('lg') {
 			width: 300px;
 			height: 300px;
 		}
@@ -179,7 +179,7 @@
 		background-repeat: no-repeat;
 		background-size: contain;
 		content: '';
-		@include media('sm') {
+		@include media('lg') {
 			width: 360px;
 			height: 360px;
 		}
@@ -189,7 +189,7 @@
 		width: 100%;
 		display: flex;
 		justify-content: center;
-		@include media('sm') {
+		@include media('lg') {
 			width: 50%;
 		}
 	}
@@ -204,7 +204,7 @@
 		line-height: 1;
 		text-align: center;
 		@include rounded(100em);
-		@include media('sm') {
+		@include media('lg') {
 			width: 70%;
 		}
 	}
@@ -212,7 +212,7 @@
 	&__item-content {
 		color: #fff;
 		width: 100%;
-		@include media('sm') {
+		@include media('lg') {
 			width: 70%;
 		}
 	}
