--- a/src/css/components/request.scss
+++ b/src/css/components/request.scss
@@ -1,7 +1,7 @@
 .request {
 	z-index: 10;
 	padding: 40px 0;
-	@include media('sm') {
+	@include media('lg') {
 		padding: 100px 0;
 	}
 	
@@ -40,7 +40,7 @@
 
 	&__header {
 		margin-bottom: 20px;
-		@include media('sm') {
+		@include media('lg') {
 			margin-bottom: 100px;
 		}
 	}
@@ -52,7 +52,7 @@
 		display: flex;
 		justify-content: space-between;
 		flex-wrap: wrap;
-		@include media('sm') {
+		@include media('lg') {
 			flex-wrap: nowrap;
 		}
 	}
@@ -61,14 +61,14 @@
 		width: 100%;
 		display: flex;
 		flex-direction: column;
-		@include media('sm') {
+		@include media('lg') {
 			width: 50%;
 		}
 	}
 
 	&__contacts {
 		color: #fff;
-		@include media('sm') {
+		@include media('lg') {
 			border-left: 1px #fff solid;
 			padding-left: 40px;
 		}
@@ -77,7 +77,7 @@
 	&__contacts-title {
 		width: 100%;
 		font-size: .8em;
-		@include media('sm') {
+		@include media('lg') {
 			width: 50%;
 			font-size: 1em;
 		}
@@ -95,7 +95,7 @@
 		border: 1px #fff solid;
 		font-size: 1em;
 		@include rounded(100em);
-		@include media('sm') {
+		@include media('lg') {
 			padding: 5px 40px;
 			font-size: 1.8em;
 		}
@@ -114,21 +114,33 @@
 		width: 60px;
 		border: 1px #fff solid;
 		@include rounded(100em);
-		@include media('sm') {
+		@include ease(.1s);
+		@include icon-stroke('link', #fff, 1px);
+		cursor: pointer;
+		@include media('lg') {
 			display: flex;
 		}
+	}
+	&__contacts-mail-copy::before {
+		width: 70%;
+		height: 70%;
+	}
+
+	&__contacts-mail-copy:hover {
+		background-color: $blue;
+		border-color: $blue;
 	}
 
 	&__social {
 		margin: 20px 0;
-		@include media('sm') {
+		@include media('lg') {
 			margin: auto 0 20px;
 		}
 	}
 
 	&__form {
 		width: 100%;
-		@include media('sm') {
+		@include media('lg') {
 			width: 40%;
 		}
 	}
