--- a/src/css/components/steps.scss
+++ b/src/css/components/steps.scss
@@ -66,6 +66,9 @@
 	&__item {
 		width: 100%;
 		@include media('sm') {
+			width: 50%;
+		}
+		@include media('lg') {
 			width: 16%;
 		}
 	}
@@ -130,6 +133,7 @@
 	&__desc {
 		color: #fff;
 		font-size: .8em;
+		width: 80%;
 		@include media('sm') {
 			font-size: 1em;
 		}
