Рефакторинг компонента skills

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -39,3 +39,4 @@
 @import "components/about-header";
 @import "components/menu-switcher";
 @import "components/popup-menu";
+@import "components/skills-accordion";
