--- a/src/includes/help.njk
+++ b/src/includes/help.njk
@@ -1,53 +1,18 @@
 <div class="help section">
 	<div class="help__layout">
 		<div class="help__stain help__stain--top"></div>
+
 		<div class="help__header section__header">
 			<h2 class="help__title section__title">What can i help with</h2>
 			<div class="help__desc section__desc">Adding AI to your organization: evaluating your ideas, building a prototype and getting funding</div>
 		</div>
+
 		<div class="help__body">
-			<div class="help__section">
-				<div class="help__section-title">Machine learning</div>
-				<div class="help__accordion js-help-accordion">
-					<div class="help__accordion-item">
-						<div class="help__accordion-title">Direct work on your project<span class="help__accordion-switcher"></span></div>
-						<div class="help__accordion-desc">Analysing your data or developing novel machine learning methods for your problem</div>
-					</div>
-					<div class="help__accordion-item">
-						<div class="help__accordion-title">R&D<span class="help__accordion-switcher"></span></div>
-						<div class="help__accordion-desc">Gathering data and building an MVP for testing new ideas</div>
-					</div>
-					<div class="help__accordion-item">
-						<div class="help__accordion-title">Adding AI to your organization<span class="help__accordion-switcher"></span></div>
-						<div class="help__accordion-desc">Evaluating your ideas, building a prototype and getting funding.If you don’t have an AI department yet, but you think you need one, I can help that. From evaluating your ideas and prototyping the service to helping with funding applications and finding people for the department</div>
-					</div>
-					<div class="help__accordion-item">
-						<div class="help__accordion-title">Make your organization data driven<span class="help__accordion-switcher"></span></div>
-						<div class="help__accordion-desc">Having right data can drastically improve strategic decision making, as well as company operations. I can help you to set up data pipelines, which would guide your decisions by providing insights from both data within your company and external sources, relevant to your problem.</div>
-					</div>
-				</div>
-			</div>
-			<div class="help__section">
-				<div class="help__section-title">Computational biology</div>
-				<div class="help__list">
-					<div class="help__list-item">
-						<div class="help__list-title">experiment design</div>
-					</div>
-					<div class="help__list-item">
-						<div class="help__list-title">analysis and interpretation of data</div>
-					</div>
-					<div class="help__list-item">
-						<div class="help__list-title">developing methods and models for biological data</div>
-					</div>
-					<div class="help__list-item">
-						<div class="help__list-title">independent evaluation of your results</div>
-					</div>
-					<div class="help__list-item">
-						<div class="help__list-title">for transcriptomics, picking a right experimental method for your problem</div>
-					</div>
-				</div>
-			</div>
+
+			{% include "skills-accordion.njk" %}
+
 		</div>
+
 	</div>
 	<div class="help__stain help__stain--bottom"></div>
 </div>
