Рефакторинг social → links

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -6,6 +6,7 @@
 @import "fonts";
 @import "components";
 @import "icons-stroke";
+@import "icons-fill";
 @import "app";
 
 // Vendors
@@ -21,11 +22,10 @@
 @import "components/projects";
 @import "components/request";
 @import "components/short-bio";
-@import "components/social";
+@import "components/links";
 @import "components/spinner";
 @import "components/steps";
 @import "components/spinner";
-
 @import "components/page-header";
 @import "components/page-nav";
 @import "components/experience";
