--- a/src/includes/about-header.njk
+++ b/src/includes/about-header.njk
@@ -11,8 +11,8 @@
 			<div class="about-header__content-me">me</div>
 			<div class="about-header__content-desc">Hi, I’m Viktor Petukhov, PhD, AI consultant and an independent researcher. I’m a digital nomad and currently live in Tbilisi after staying for several years in the US, Denmark and Switzerland. I have a background in Applied Maths and Informatics, and I’m looking for ways to apply it to make the world a better place.</div>
 		</div>
-		<div class="about-header__content-social">
-			{% include "social.njk" %}
+		<div class="about-header__content-links">
+			{% include "links.njk" %}
 		</div>
 		</div>
 		<div class="about-header__stain about-header__stain--1"></div>
