--- a/src/includes/full-footer.njk
+++ b/src/includes/full-footer.njk
@@ -14,8 +14,8 @@
 						<div class="request__contacts-mail-copy js-clipboard" title="Скопировать почту" data-clipboard-text="{{ metadata.mailto }}"></div>
 					</div>
 				</div>
-				<div class="request__social">
-					{% include "social.njk" %}
+				<div class="request__links">
+					{% include "links.njk" %}
 				</div>
 			</div>
 			<div class="request__form">
